# Courswork_3

./: .gitignore  README.md  main.py  pyproject.toml
src/api/: abstract_api.py  hh_api.py
src/db/: config.py  data_loader.py  database.py  db_manager.py
src/vacancy/: vacancy.py
